Removed cm-high white space linked to post-content class. Fix : define new wrapper-content class used in radio.html, etc. Added bottom margin to site-header-image since no inner nav bar provides padding.

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -1,7 +1,7 @@
 /**
  * Reset some basic elements
  */
-body, h1, h2, h3, h4, h5, h6,
+body, header-science, h1, h2, h3, h4, h5, h6,
 p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
   margin: 0;
@@ -23,6 +23,8 @@ body {
        -o-font-feature-settings: "kern" 1;
           font-feature-settings: "kern" 1;
   font-kerning: normal;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 
